# trading

./: .env.example  .gitattributes  .gitignore  .replit  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.agents/memory/: MEMORY.md  alpha-vantage-news.md  config-default-drift.md  news-scheduling.md  ranking-signal-path.md  scheduler-deployed-path.md  streamlit-unsafe-html.md
.github/workflows/: ci-cd.yml
.streamlit/: config.toml
.validation-docker/: config.json  contexts
attached_assets/: Pasted-Bugs-issues-I-found-verified-in-code-Higher-impact-Sche_1781101833558.txt
autonomous_trading_intelligence.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: docker-paper-trading.md  launch_remediation_plan.md
frontend/: .dockerignore  Dockerfile  next-env.d.ts  package-lock.json  package.json  tailwind.config.ts
infra/aws/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
runtime_env/: pyvenv.cfg
scripts/: docker_paper_smoke_test.py  train_alpha_xgboost.py  validate_platform.py  validation_report.json  validation_report.md
trading_system/: __init__.py  alembic.ini
trading_system/app/: __init__.py  tasks.py
trading_system/dashboard/: app.py
trading_system/migrations/: env.py
trading_system/tests/: conftest.py  test_alpaca_adapter_retries.py  test_alpha_engine.py  test_alpha_vantage_news.py  test_api_security.py  test_benchmark_performance_service.py  test_config.py  test_dashboard_static.py  test_expectancy.py  (+29 more)
(+153 files in other folders)
