[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-trading-intelligence"
version = "0.1.0"
description = "Research-first autonomous trading intelligence platform with paper-trading safety controls."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "streamlit>=1.36.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.2",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "vectorbt>=0.26.0",
  "yfinance>=0.2.40",
  "alpaca-py>=0.29.0",
  "python-dotenv>=1.0.1",
  "requests>=2.32.0",
  "httpx>=0.27.0",
  "websockets>=12.0",
  "redis>=5.0.0",
  "bcrypt>=4.1.0",
  "boto3>=1.34.0",
  "pytest>=8.2.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
  "pytest-cov>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["trading_system*"]

[tool.pytest.ini_options]
testpaths = ["trading_system/tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
